--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Phishing Detection Extension",
+  "name": "No Phishing",
   "version": "1.0",
+  "description": "No Phishing provides robust, real-time protection against phishing threats, ensuring safe browsing and enhanced internet security.",
   "permissions": [
     "tabs",
     "webNavigation",
@@ -15,7 +16,8 @@
     "persistent": false
   },
   "browser_action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_icon": "images/logo.png"
   },
   "content_security_policy": "script-src 'self'; object-src 'self'"
 }
